[gd_scene load_steps=17 format=4 uid="uid://d3yf8sa6e7l7s"]

[ext_resource type="TileSet" uid="uid://2tcyrk04i7aa" path="res://assets/tilemaps/indoor_basic.tres" id="1_nbryx"]
[ext_resource type="Script" uid="uid://c03nmdlf4a86o" path="res://levels/market/control.gd" id="2_5x6aq"]
[ext_resource type="Texture2D" uid="uid://d4en6cvjicl6g" path="res://assets/icons/coffee_cup.png" id="3_7dset"]
[ext_resource type="Script" uid="uid://bjgvuoh3yth28" path="res://levels/market/orders.gd" id="3_8elxl"]
[ext_resource type="PackedScene" uid="uid://cinnao4qbuhsx" path="res://levels/market/crafter.tscn" id="3_pya02"]
[ext_resource type="Texture2D" uid="uid://eoxk3fpsayio" path="res://assets/icons/iced_coffee.png" id="5_6bws3"]
[ext_resource type="Texture2D" uid="uid://dgsfqibawkkd1" path="res://assets/icons/bread_loaf.png" id="6_72vhi"]
[ext_resource type="Texture2D" uid="uid://cgs0vwnoajkk8" path="res://assets/icons/croissant.png" id="7_ednky"]
[ext_resource type="PackedScene" uid="uid://5aio7bl5bvkw" path="res://time/RentCycle.tscn" id="9_frsyo"]
[ext_resource type="Texture2D" uid="uid://bmjavsdyhdtqq" path="res://assets/icons/cofee_grounds.png" id="9_tna38"]
[ext_resource type="Script" uid="uid://dnwf3ha7latv3" path="res://managers/day_night/lights.gd" id="10_2mcdl"]
[ext_resource type="Texture2D" uid="uid://y6jxnh47clb7" path="res://assets/icons/milk_carton.png" id="10_cdyci"]
[ext_resource type="Texture2D" uid="uid://cwlexn21v7wkn" path="res://assets/icons/flour.png" id="11_8xf55"]
[ext_resource type="Texture2D" uid="uid://dudjtdh0pvorn" path="res://assets/icons/egg_carton.png" id="12_wc661"]

[sub_resource type="Gradient" id="Gradient_2mcdl"]
colors = PackedColorArray(0, 0, 0, 1, 0.983947, 0.842489, 0, 0.721569)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cdyci"]
gradient = SubResource("Gradient_2mcdl")
fill_from = Vector2(0.495726, 0.974359)
fill_to = Vector2(0.495726, 0)

[node name="World" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -18
offset_right = 40.0
offset_bottom = 45.0
scale = Vector2(28.8482, 15.8941)
color = Color(0, 0, 0, 1)

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABMAAAAOAAgAAAABABMAAAAQAAkAAAACABMAAAAQAAkAAAADABMAAAAQAAkAAAAEABMAAAAQAAkAAAAFABMAAAAQAAkAAAAGABMAAAAQAAkAAAAHABMAAAAQAAkAAAAIABMAAAAQAAkAAAAJABMAAAAQAAkAAAAKABMAAAAQAAkAAAALABMAAAAQAAkAAAAMABMAAAAQAAkAAAANABMAAAAQAAkAAAAOABMAAAAQAAkAAAAPABMAAAAQAAkAAAAQABMAAAAQAAkAAAARABMAAAAQAAkAAAASABMAAAAQAAkAAAATABMAAAAQAAkAAAAUABMAAAAQAAkAAAAVABMAAAAQAAkAAAAWABMAAAAQAAkAAAAXABMAAAAQAAkAAAAYABMAAAAQAAkAAAAZABMAAAAQAAkAAAAaABMAAAAQAAkAAAAbABMAAAAQAAkAAAAcABMAAAAQAAkAAAAdABMAAAAQAAkAAAAeABMAAAAQAAkAAAAfABMAAAAQAAkAAAAgABMAAAAQAAkAAAAhABMAAAAQAAkAAAAiABMAAAAQAAkAAAAjABMAAAATAAgAAAAAAAAAAAAPAAQAAAAAAAEAAAAOAAYAAAAAAAIAAAAOAAYAAAAAAAMAAAAOAAYAAAAAAAQAAAAOAAYAAAAAAAUAAAAOAAYAAAAAAAYAAAAOAAYAAAAAAAcAAAAOAAYAAAAAAAgAAAAOAAYAAAAAAAkAAAAOAAYAAAAAAAoAAAAOAAYAAAAAAAsAAAAOAAYAAAAAAAwAAAAOAAYAAAAAAA0AAAAOAAYAAAAAAA4AAAAOAAYAAAAAAA8AAAAOAAYAAAAAABAAAAAOAAYAAAAAABEAAAAOAAYAAAAAABIAAAAOAAYAAAABAAAAAAARAAQAAAABAAEAAAAVAAgAAAABAAIAAAAVAAgAAAABAAMAAAAVAAgAAAABAAQAAAAVAAgAAAABAAUAAAAVAAgAAAABAAYAAAAVAAgAAAABAAcAAAAVAAgAAAABAAgAAAAVAAgAAAABAAkAAAAVAAgAAAABAAoAAAAVAAgAAAABAAsAAAAVAAgAAAABAAwAAAAVAAgAAAABAA0AAAAVAAgAAAABAA4AAAAVAAgAAAABAA8AAAAVAAgAAAABABAAAAAVAAgAAAABABEAAAAVAAgAAAABABIAAAAVAAgAAAACAAAAAAAQAAQAAAACAAEAAAAVAAgAAAACAAIAAAAVAAgAAAACAAMAAAAVAAgAAAACAAQAAAAVAAgAAAACAAUAAAAVAAgAAAACAAYAAAAVAAgAAAACAAcAAAAVAAgAAAACAAgAAAAVAAgAAAACAAkAAAAVAAgAAAACAAoAAAAVAAgAAAACAAsAAAAVAAgAAAACAAwAAAAVAAgAAAACAA0AAAAVAAgAAAACAA4AAAAVAAgAAAACAA8AAAAVAAgAAAACABAAAAAVAAgAAAACABEAAAAVAAgAAAACABIAAAAVAAgAAAADAAAAAAARAAQAAAADAAEAAAAVAAgAAAADAAIAAAAVAAgAAAADAAMAAAAVAAgAAAADAAQAAAAVAAgAAAADAAUAAAAVAAgAAAADAAYAAAAVAAgAAAADAAcAAAAVAAgAAAADAAgAAAAVAAgAAAADAAkAAAAVAAgAAAADAAoAAAAVAAgAAAADAAsAAAAVAAgAAAADAAwAAAAVAAgAAAADAA0AAAAVAAgAAAADAA4AAAAVAAgAAAADAA8AAAAVAAgAAAADABAAAAAVAAgAAAADABEAAAAVAAgAAAADABIAAAAVAAgAAAAEAAAAAAAQAAQAAAAEAAEAAAAVAAgAAAAEAAIAAAAVAAgAAAAEAAMAAAAVAAgAAAAEAAQAAAAVAAgAAAAEAAUAAAAVAAgAAAAEAAYAAAAVAAgAAAAEAAcAAAAVAAgAAAAEAAgAAAAVAAgAAAAEAAkAAAAVAAgAAAAEAAoAAAAVAAgAAAAEAAsAAAAVAAgAAAAEAAwAAAAVAAgAAAAEAA0AAAAVAAgAAAAEAA4AAAAVAAgAAAAEAA8AAAAVAAgAAAAEABAAAAAVAAgAAAAEABEAAAAVAAgAAAAEABIAAAAVAAgAAAAFAAAAAAARAAQAAAAFAAEAAAAVAAgAAAAFAAIAAAAVAAgAAAAFAAMAAAAVAAgAAAAFAAQAAAAVAAgAAAAFAAUAAAAVAAgAAAAFAAYAAAAVAAgAAAAFAAcAAAAVAAgAAAAFAAgAAAAVAAgAAAAFAAkAAAAVAAgAAAAFAAoAAAAVAAgAAAAFAAsAAAAVAAgAAAAFAAwAAAAVAAgAAAAFAA0AAAAVAAgAAAAFAA4AAAAVAAgAAAAFAA8AAAAVAAgAAAAFABAAAAAVAAgAAAAFABEAAAAVAAgAAAAFABIAAAAVAAgAAAAGAAAAAAAQAAQAAAAGAAEAAAAVAAgAAAAGAAIAAAAVAAgAAAAGAAMAAAAVAAgAAAAGAAQAAAAVAAgAAAAGAAUAAAAVAAgAAAAGAAYAAAAVAAgAAAAGAAcAAAAVAAgAAAAGAAgAAAAVAAgAAAAGAAkAAAAVAAgAAAAGAAoAAAAVAAgAAAAGAAsAAAAVAAgAAAAGAAwAAAAVAAgAAAAGAA0AAAAVAAgAAAAGAA4AAAAVAAgAAAAGAA8AAAAVAAgAAAAGABAAAAAVAAgAAAAGABEAAAAVAAgAAAAGABIAAAAVAAgAAAAHAAAAAAARAAQAAAAHAAEAAAAVAAgAAAAHAAIAAAAVAAgAAAAHAAMAAAAVAAgAAAAHAAQAAAAVAAgAAAAHAAUAAAAVAAgAAAAHAAYAAAAVAAgAAAAHAAcAAAAVAAgAAAAHAAgAAAAVAAgAAAAHAAkAAAAVAAgAAAAHAAoAAAAVAAgAAAAHAAsAAAAVAAgAAAAHAAwAAAAVAAgAAAAHAA0AAAAVAAgAAAAHAA4AAAAVAAgAAAAHAA8AAAAVAAgAAAAHABAAAAAVAAgAAAAHABEAAAAVAAgAAAAHABIAAAAVAAgAAAAIAAAAAAAQAAQAAAAIAAEAAAAVAAgAAAAIAAIAAAAVAAgAAAAIAAMAAAAVAAgAAAAIAAQAAAAVAAgAAAAIAAUAAAAVAAgAAAAIAAYAAAAVAAgAAAAIAAcAAAAVAAgAAAAIAAgAAAAVAAgAAAAIAAkAAAAVAAgAAAAIAAoAAAAVAAgAAAAIAAsAAAAVAAgAAAAIAAwAAAAVAAgAAAAIAA0AAAAVAAgAAAAIAA4AAAAVAAgAAAAIAA8AAAAVAAgAAAAIABAAAAAVAAgAAAAIABEAAAAVAAgAAAAIABIAAAAVAAgAAAAJAAAAAAARAAQAAAAJAAEAAAAVAAgAAAAJAAIAAAAVAAgAAAAJAAMAAAAVAAgAAAAJAAQAAAAVAAgAAAAJAAUAAAAVAAgAAAAJAAYAAAAVAAgAAAAJAAcAAAAVAAgAAAAJAAgAAAAVAAgAAAAJAAkAAAAVAAgAAAAJAAoAAAAVAAgAAAAJAAsAAAAVAAgAAAAJAAwAAAAVAAgAAAAJAA0AAAAVAAgAAAAJAA4AAAAVAAgAAAAJAA8AAAAVAAgAAAAJABAAAAAVAAgAAAAJABEAAAAVAAgAAAAJABIAAAAVAAgAAAAKAAAAAAAQAAQAAAAKAAEAAAAVAAgAAAAKAAIAAAAVAAgAAAAKAAMAAAAVAAgAAAAKAAQAAAAVAAgAAAAKAAUAAAAVAAgAAAAKAAYAAAAVAAgAAAAKAAcAAAAVAAgAAAAKAAgAAAAVAAgAAAAKAAkAAAAVAAgAAAAKAAoAAAAVAAgAAAAKAAsAAAAVAAgAAAAKAAwAAAAVAAgAAAAKAA0AAAAVAAgAAAAKAA4AAAAVAAgAAAAKAA8AAAAVAAgAAAAKABAAAAAVAAgAAAAKABEAAAAVAAgAAAAKABIAAAAVAAgAAAALAAAAAAARAAQAAAALAAEAAAAVAAgAAAALAAIAAAAVAAgAAAALAAMAAAAVAAgAAAALAAQAAAAVAAgAAAALAAUAAAAVAAgAAAALAAYAAAAVAAgAAAALAAcAAAAVAAgAAAALAAgAAAAVAAgAAAALAAkAAAAVAAgAAAALAAoAAAAVAAgAAAALAAsAAAAVAAgAAAALAAwAAAAVAAgAAAALAA0AAAAVAAgAAAALAA4AAAAVAAgAAAALAA8AAAAVAAgAAAALABAAAAAVAAgAAAALABEAAAAVAAgAAAALABIAAAAVAAgAAAAMAAAAAAAQAAQAAAAMAAEAAAAVAAgAAAAMAAIAAAAVAAgAAAAMAAMAAAAVAAgAAAAMAAQAAAAVAAgAAAAMAAUAAAAVAAgAAAAMAAYAAAAVAAgAAAAMAAcAAAAVAAgAAAAMAAgAAAAVAAgAAAAMAAkAAAAVAAgAAAAMAAoAAAAVAAgAAAAMAAsAAAAVAAgAAAAMAAwAAAAVAAgAAAAMAA0AAAAVAAgAAAAMAA4AAAAVAAgAAAAMAA8AAAAVAAgAAAAMABAAAAAVAAgAAAAMABEAAAAVAAgAAAAMABIAAAAVAAgAAAANAAAAAAARAAQAAAANAAEAAAAVAAgAAAANAAIAAAAVAAgAAAANAAMAAAAVAAgAAAANAAQAAAAVAAgAAAANAAUAAAAVAAgAAAANAAYAAAAVAAgAAAANAAcAAAAVAAgAAAANAAgAAAAVAAgAAAANAAkAAAAVAAgAAAANAAoAAAAVAAgAAAANAAsAAAAVAAgAAAANAAwAAAAVAAgAAAANAA0AAAAVAAgAAAANAA4AAAAVAAgAAAANAA8AAAAVAAgAAAANABAAAAAVAAgAAAANABEAAAAVAAgAAAANABIAAAAVAAgAAAAOAAAAAAAQAAQAAAAOAAEAAAAVAAgAAAAOAAIAAAAVAAgAAAAOAAMAAAAVAAgAAAAOAAQAAAAVAAgAAAAOAAUAAAAVAAgAAAAOAAYAAAAVAAgAAAAOAAcAAAAVAAgAAAAOAAgAAAAVAAgAAAAOAAkAAAAVAAgAAAAOAAoAAAAVAAgAAAAOAAsAAAAVAAgAAAAOAAwAAAAVAAgAAAAOAA0AAAAVAAgAAAAOAA4AAAAVAAgAAAAOAA8AAAAVAAgAAAAOABAAAAAVAAgAAAAOABEAAAAVAAgAAAAOABIAAAAVAAgAAAAPAAAAAAARAAQAAAAPAAEAAAAVAAgAAAAPAAIAAAAVAAgAAAAPAAMAAAAVAAgAAAAPAAQAAAAVAAgAAAAPAAUAAAAVAAgAAAAPAAYAAAAVAAgAAAAPAAcAAAAVAAgAAAAPAAgAAAAVAAgAAAAPAAkAAAAVAAgAAAAPAAoAAAAVAAgAAAAPAAsAAAAVAAgAAAAPAAwAAAAVAAgAAAAPAA0AAAAVAAgAAAAPAA4AAAAVAAgAAAAPAA8AAAAVAAgAAAAPABAAAAAVAAgAAAAPABEAAAAVAAgAAAAPABIAAAAVAAgAAAAQAAAAAAAQAAQAAAAQAAEAAAAVAAgAAAAQAAIAAAAVAAgAAAAQAAMAAAAVAAgAAAAQAAQAAAAVAAgAAAAQAAUAAAAVAAgAAAAQAAYAAAAVAAgAAAAQAAcAAAAVAAgAAAAQAAgAAAAVAAgAAAAQAAkAAAAVAAgAAAAQAAoAAAAVAAgAAAAQAAsAAAAVAAgAAAAQAAwAAAAVAAgAAAAQAA0AAAAVAAgAAAAQAA4AAAAVAAgAAAAQAA8AAAAVAAgAAAAQABAAAAAVAAgAAAAQABEAAAAVAAgAAAAQABIAAAAVAAgAAAARAAAAAAARAAQAAAARAAEAAAAVAAgAAAARAAIAAAAVAAgAAAARAAMAAAAVAAgAAAARAAQAAAAVAAgAAAARAAUAAAAVAAgAAAARAAYAAAAVAAgAAAARAAcAAAAVAAgAAAARAAgAAAAVAAgAAAARAAkAAAAVAAgAAAARAAoAAAAVAAgAAAARAAsAAAAVAAgAAAARAAwAAAAVAAgAAAARAA0AAAAVAAgAAAARAA4AAAAVAAgAAAARAA8AAAAVAAgAAAARABAAAAAVAAgAAAARABEAAAAVAAgAAAARABIAAAAVAAgAAAASAAAAAAAQAAQAAAASAAEAAAAVAAgAAAASAAIAAAAVAAgAAAASAAMAAAAVAAgAAAASAAQAAAAVAAgAAAASAAUAAAAVAAgAAAASAAYAAAAVAAgAAAASAAcAAAAVAAgAAAASAAgAAAAVAAgAAAASAAkAAAAVAAgAAAASAAoAAAAVAAgAAAASAAsAAAAVAAgAAAASAAwAAAAVAAgAAAASAA0AAAAVAAgAAAASAA4AAAAVAAgAAAASAA8AAAAVAAgAAAASABAAAAAVAAgAAAASABEAAAAVAAgAAAASABIAAAAVAAgAAAATAAAAAAARAAQAAAATAAEAAAAVAAgAAAATAAIAAAAVAAgAAAATAAMAAAAVAAgAAAATAAQAAAAVAAgAAAATAAUAAAAVAAgAAAATAAYAAAAVAAgAAAATAAcAAAAVAAgAAAATAAgAAAAVAAgAAAATAAkAAAAVAAgAAAATAAoAAAAVAAgAAAATAAsAAAAVAAgAAAATAAwAAAAVAAgAAAATAA0AAAAVAAgAAAATAA4AAAAVAAgAAAATAA8AAAAVAAgAAAATABAAAAAVAAgAAAATABEAAAAVAAgAAAATABIAAAAVAAgAAAAUAAAAAAAQAAQAAAAUAAEAAAAVAAgAAAAUAAIAAAAVAAgAAAAUAAMAAAAVAAgAAAAUAAQAAAAVAAgAAAAUAAUAAAAVAAgAAAAUAAYAAAAVAAgAAAAUAAcAAAAVAAgAAAAUAAgAAAAVAAgAAAAUAAkAAAAVAAgAAAAUAAoAAAAVAAgAAAAUAAsAAAAVAAgAAAAUAAwAAAAVAAgAAAAUAA0AAAAVAAgAAAAUAA4AAAAVAAgAAAAUAA8AAAAVAAgAAAAUABAAAAAVAAgAAAAUABEAAAAVAAgAAAAUABIAAAAVAAgAAAAVAAAAAAARAAQAAAAVAAEAAAAVAAgAAAAVAAIAAAAVAAgAAAAVAAMAAAAVAAgAAAAVAAQAAAAVAAgAAAAVAAUAAAAVAAgAAAAVAAYAAAAVAAgAAAAVAAcAAAAVAAgAAAAVAAgAAAAVAAgAAAAVAAkAAAAVAAgAAAAVAAoAAAAVAAgAAAAVAAsAAAAVAAgAAAAVAAwAAAAVAAgAAAAVAA0AAAAVAAgAAAAVAA4AAAAVAAgAAAAVAA8AAAAVAAgAAAAVABAAAAAVAAgAAAAVABEAAAAVAAgAAAAVABIAAAAVAAgAAAAWAAAAAAAQAAQAAAAWAAEAAAAVAAgAAAAWAAIAAAAVAAgAAAAWAAMAAAAVAAgAAAAWAAQAAAAVAAgAAAAWAAUAAAAVAAgAAAAWAAYAAAAVAAgAAAAWAAcAAAAVAAgAAAAWAAgAAAAVAAgAAAAWAAkAAAAVAAgAAAAWAAoAAAAVAAgAAAAWAAsAAAAVAAgAAAAWAAwAAAAVAAgAAAAWAA0AAAAVAAgAAAAWAA4AAAAVAAgAAAAWAA8AAAAVAAgAAAAWABAAAAAVAAgAAAAWABEAAAAVAAgAAAAWABIAAAAVAAgAAAAXAAAAAAARAAQAAAAXAAEAAAAVAAgAAAAXAAIAAAAVAAgAAAAXAAMAAAAVAAgAAAAXAAQAAAAVAAgAAAAXAAUAAAAVAAgAAAAXAAYAAAAVAAgAAAAXAAcAAAAVAAgAAAAXAAgAAAAVAAgAAAAXAAkAAAAVAAgAAAAXAAoAAAAVAAgAAAAXAAsAAAAVAAgAAAAXAAwAAAAVAAgAAAAXAA0AAAAVAAgAAAAXAA4AAAAVAAgAAAAXAA8AAAAVAAgAAAAXABAAAAAVAAgAAAAXABEAAAAVAAgAAAAXABIAAAAVAAgAAAAYAAAAAAAQAAQAAAAYAAEAAAAVAAgAAAAYAAIAAAAVAAgAAAAYAAMAAAAVAAgAAAAYAAQAAAAVAAgAAAAYAAUAAAAVAAgAAAAYAAYAAAAVAAgAAAAYAAcAAAAVAAgAAAAYAAgAAAAVAAgAAAAYAAkAAAAVAAgAAAAYAAoAAAAVAAgAAAAYAAsAAAAVAAgAAAAYAAwAAAAVAAgAAAAYAA0AAAAVAAgAAAAYAA4AAAAVAAgAAAAYAA8AAAAVAAgAAAAYABAAAAAVAAgAAAAYABEAAAAVAAgAAAAYABIAAAAVAAgAAAAZAAAAAAARAAQAAAAZAAEAAAAVAAgAAAAZAAIAAAAVAAgAAAAZAAMAAAAVAAgAAAAZAAQAAAAVAAgAAAAZAAUAAAAVAAgAAAAZAAYAAAAVAAgAAAAZAAcAAAAVAAgAAAAZAAgAAAAVAAgAAAAZAAkAAAAVAAgAAAAZAAoAAAAVAAgAAAAZAAsAAAAVAAgAAAAZAAwAAAAVAAgAAAAZAA0AAAAVAAgAAAAZAA4AAAAVAAgAAAAZAA8AAAAVAAgAAAAZABAAAAAVAAgAAAAZABEAAAAVAAgAAAAZABIAAAAVAAgAAAAaAAAAAAAQAAQAAAAaAAEAAAAVAAgAAAAaAAIAAAAVAAgAAAAaAAMAAAAVAAgAAAAaAAQAAAAVAAgAAAAaAAUAAAAVAAgAAAAaAAYAAAAVAAgAAAAaAAcAAAAVAAgAAAAaAAgAAAAVAAgAAAAaAAkAAAAVAAgAAAAaAAoAAAAVAAgAAAAaAAsAAAAVAAgAAAAaAAwAAAAVAAgAAAAaAA0AAAAVAAgAAAAaAA4AAAAVAAgAAAAaAA8AAAAVAAgAAAAaABAAAAAVAAgAAAAaABEAAAAVAAgAAAAaABIAAAAVAAgAAAAbAAAAAAARAAQAAAAbAAEAAAAVAAgAAAAbAAIAAAAVAAgAAAAbAAMAAAAVAAgAAAAbAAQAAAAVAAgAAAAbAAUAAAAVAAgAAAAbAAYAAAAVAAgAAAAbAAcAAAAVAAgAAAAbAAgAAAAVAAgAAAAbAAkAAAAVAAgAAAAbAAoAAAAVAAgAAAAbAAsAAAAVAAgAAAAbAAwAAAAVAAgAAAAbAA0AAAAVAAgAAAAbAA4AAAAVAAgAAAAbAA8AAAAVAAgAAAAbABAAAAAVAAgAAAAbABEAAAAVAAgAAAAbABIAAAAVAAgAAAAcAAAAAAAQAAQAAAAcAAEAAAAVAAgAAAAcAAIAAAAVAAgAAAAcAAMAAAAVAAgAAAAcAAQAAAAVAAgAAAAcAAUAAAAVAAgAAAAcAAYAAAAVAAgAAAAcAAcAAAAVAAgAAAAcAAgAAAAVAAgAAAAcAAkAAAAVAAgAAAAcAAoAAAAVAAgAAAAcAAsAAAAVAAgAAAAcAAwAAAAVAAgAAAAcAA0AAAAVAAgAAAAcAA4AAAAVAAgAAAAcAA8AAAAVAAgAAAAcABAAAAAVAAgAAAAcABEAAAAVAAgAAAAcABIAAAAVAAgAAAAdAAAAAAARAAQAAAAdAAEAAAAVAAgAAAAdAAIAAAAVAAgAAAAdAAMAAAAVAAgAAAAdAAQAAAAVAAgAAAAdAAUAAAAVAAgAAAAdAAYAAAAVAAgAAAAdAAcAAAAVAAgAAAAdAAgAAAAVAAgAAAAdAAkAAAAVAAgAAAAdAAoAAAAVAAgAAAAdAAsAAAAVAAgAAAAdAAwAAAAVAAgAAAAdAA0AAAAVAAgAAAAdAA4AAAAVAAgAAAAdAA8AAAAVAAgAAAAdABAAAAAVAAgAAAAdABEAAAAVAAgAAAAdABIAAAAVAAgAAAAeAAAAAAAQAAQAAAAeAAEAAAAVAAgAAAAeAAIAAAAVAAgAAAAeAAMAAAAVAAgAAAAeAAQAAAAVAAgAAAAeAAUAAAAVAAgAAAAeAAYAAAAVAAgAAAAeAAcAAAAVAAgAAAAeAAgAAAAVAAgAAAAeAAkAAAAVAAgAAAAeAAoAAAAVAAgAAAAeAAsAAAAVAAgAAAAeAAwAAAAVAAgAAAAeAA0AAAAVAAgAAAAeAA4AAAAVAAgAAAAeAA8AAAAVAAgAAAAeABAAAAAVAAgAAAAeABEAAAAVAAgAAAAeABIAAAAVAAgAAAAfAAAAAAARAAQAAAAfAAEAAAAVAAgAAAAfAAIAAAAVAAgAAAAfAAMAAAAVAAgAAAAfAAQAAAAVAAgAAAAfAAUAAAAVAAgAAAAfAAYAAAAVAAgAAAAfAAcAAAAVAAgAAAAfAAgAAAAVAAgAAAAfAAkAAAAVAAgAAAAfAAoAAAAVAAgAAAAfAAsAAAAVAAgAAAAfAAwAAAAVAAgAAAAfAA0AAAAVAAgAAAAfAA4AAAAVAAgAAAAfAA8AAAAVAAgAAAAfABAAAAAVAAgAAAAfABEAAAAVAAgAAAAfABIAAAAVAAgAAAAgAAAAAAAQAAQAAAAgAAEAAAAVAAgAAAAgAAIAAAAVAAgAAAAgAAMAAAAVAAgAAAAgAAQAAAAVAAgAAAAgAAUAAAAVAAgAAAAgAAYAAAAVAAgAAAAgAAcAAAAVAAgAAAAgAAgAAAAVAAgAAAAgAAkAAAAVAAgAAAAgAAoAAAAVAAgAAAAgAAsAAAAVAAgAAAAgAAwAAAAVAAgAAAAgAA0AAAAVAAgAAAAgAA4AAAAVAAgAAAAgAA8AAAAVAAgAAAAgABAAAAAVAAgAAAAgABEAAAAVAAgAAAAgABIAAAAVAAgAAAAhAAAAAAARAAQAAAAhAAEAAAAVAAgAAAAhAAIAAAAVAAgAAAAhAAMAAAAVAAgAAAAhAAQAAAAVAAgAAAAhAAUAAAAVAAgAAAAhAAYAAAAVAAgAAAAhAAcAAAAVAAgAAAAhAAgAAAAVAAgAAAAhAAkAAAAVAAgAAAAhAAoAAAAVAAgAAAAhAAsAAAAVAAgAAAAhAAwAAAAVAAgAAAAhAA0AAAAVAAgAAAAhAA4AAAAVAAgAAAAhAA8AAAAVAAgAAAAhABAAAAAVAAgAAAAhABEAAAAVAAgAAAAhABIAAAAVAAgAAAAiAAAAAAAQAAQAAAAiAAEAAAAVAAgAAAAiAAIAAAAVAAgAAAAiAAMAAAAVAAgAAAAiAAQAAAAVAAgAAAAiAAUAAAAVAAgAAAAiAAYAAAAVAAgAAAAiAAcAAAAVAAgAAAAiAAgAAAAVAAgAAAAiAAkAAAAVAAgAAAAiAAoAAAAVAAgAAAAiAAsAAAAVAAgAAAAiAAwAAAAVAAgAAAAiAA0AAAAVAAgAAAAiAA4AAAAVAAgAAAAiAA8AAAAVAAgAAAAiABAAAAAVAAgAAAAiABEAAAAVAAgAAAAiABIAAAAVAAgAAAAjAAAAAAASAAQAAAAjAAEAAAATAAcAAAAjAAIAAAATAAcAAAAjAAMAAAATAAcAAAAjAAQAAAATAAcAAAAjAAUAAAATAAcAAAAjAAYAAAATAAcAAAAjAAcAAAATAAcAAAAjAAgAAAATAAcAAAAjAAkAAAATAAcAAAAjAAoAAAATAAcAAAAjAAsAAAATAAcAAAAjAAwAAAATAAcAAAAjAA0AAAATAAcAAAAjAA4AAAATAAcAAAAjAA8AAAATAAcAAAAjABAAAAATAAcAAAAjABEAAAATAAcAAAAjABIAAAATAAcAAAA=")
tile_set = ExtResource("1_nbryx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Market" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 641.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_5x6aq")

[node name="Exit" type="Button" parent="CanvasLayer/Market"]
layout_mode = 2
offset_left = 32.0
offset_top = 32.0
offset_right = 126.0
offset_bottom = 74.0
text = "Exit"

[node name="Inventory" type="Button" parent="CanvasLayer/Market"]
layout_mode = 0
offset_left = 1024.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 80.0
text = "Inventory"

[node name="Crafters" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Crafters"]
layout_mode = 0
offset_left = 128.0
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 336.0
theme_override_constants/separation = 235

[node name="CoffeeCrafter" parent="CanvasLayer/Crafters/HBoxContainer" instance=ExtResource("3_pya02")]
layout_mode = 2
craft_value = 25.0
crafted_item = "coffee"
coffee_ground_amount = 1
milk_amount = 1
sprite_image = ExtResource("3_7dset")

[node name="IcedCoffeeCrafter" parent="CanvasLayer/Crafters/HBoxContainer" instance=ExtResource("3_pya02")]
layout_mode = 2
craft_value = 20.0
crafted_item = "iced_coffee"
coffee_ground_amount = 1
milk_amount = 2
sprite_image = ExtResource("5_6bws3")

[node name="BreadCrafter" parent="CanvasLayer/Crafters/HBoxContainer" instance=ExtResource("3_pya02")]
layout_mode = 2
craft_value = 15.0
crafted_item = "bread_roll"
milk_amount = 1
flour_amount = 1
egg_amount = 1
sprite_image = ExtResource("6_72vhi")

[node name="CroissantCrafter" parent="CanvasLayer/Crafters/HBoxContainer" instance=ExtResource("3_pya02")]
layout_mode = 2
craft_value = 15.0
crafted_item = "croissant"
milk_amount = 1
flour_amount = 2
egg_amount = 2
sprite_image = ExtResource("7_ednky")

[node name="Orders" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_8elxl")

[node name="OrderTimer" type="Timer" parent="CanvasLayer/Orders"]
wait_time = 3.0
autostart = true

[node name="Background" type="ColorRect" parent="CanvasLayer/Orders"]
layout_mode = 0
offset_left = 32.0
offset_top = 544.0
offset_right = 1120.0
offset_bottom = 608.0
color = Color(0.0980392, 0.0980392, 0.0980392, 0.776471)

[node name="OrderContainer" type="HBoxContainer" parent="CanvasLayer/Orders"]
layout_mode = 0
offset_left = 32.0
offset_top = 544.0
offset_right = 1120.0
offset_bottom = 608.0
theme_override_constants/separation = 75

[node name="Ingredients" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CoffeeIngredients" type="Control" parent="CanvasLayer/Ingredients"]
anchors_preset = 0
offset_left = 136.0
offset_top = 88.0
offset_right = 312.0
offset_bottom = 200.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ingredients/CoffeeIngredients"]
position = Vector2(64, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_tna38")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Ingredients/CoffeeIngredients"]
position = Vector2(64, 88)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cdyci")

[node name="GroundCount" type="Label" parent="CanvasLayer/Ingredients/CoffeeIngredients"]
layout_mode = 2
offset_left = 80.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 55.0
text = "x 1"

[node name="MilkCount" type="Label" parent="CanvasLayer/Ingredients/CoffeeIngredients"]
layout_mode = 2
offset_left = 80.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 95.0
text = "x 1"

[node name="Ingredients" type="Label" parent="CanvasLayer/Ingredients/CoffeeIngredients"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 23.0
text = "Ingredients"

[node name="IcedIngredients" type="Control" parent="CanvasLayer/Ingredients"]
anchors_preset = 0
offset_left = 368.0
offset_top = 88.0
offset_right = 552.0
offset_bottom = 200.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ingredients/IcedIngredients"]
position = Vector2(64, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_tna38")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Ingredients/IcedIngredients"]
position = Vector2(64, 88)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cdyci")

[node name="GroundCount" type="Label" parent="CanvasLayer/Ingredients/IcedIngredients"]
layout_mode = 0
offset_left = 80.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 55.0
text = "x 1"

[node name="MilkCount" type="Label" parent="CanvasLayer/Ingredients/IcedIngredients"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 95.0
text = "x 2"

[node name="Ingredients" type="Label" parent="CanvasLayer/Ingredients/IcedIngredients"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 23.0
text = "Ingredients"

[node name="BreadIngredients" type="Control" parent="CanvasLayer/Ingredients"]
anchors_preset = 0
offset_left = 608.0
offset_top = 88.0
offset_right = 784.0
offset_bottom = 200.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ingredients/BreadIngredients"]
position = Vector2(32, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8xf55")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Ingredients/BreadIngredients"]
position = Vector2(97.25, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cdyci")

[node name="GroundCount" type="Label" parent="CanvasLayer/Ingredients/BreadIngredients"]
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 55.0
text = "x 1"

[node name="MilkCount" type="Label" parent="CanvasLayer/Ingredients/BreadIngredients"]
layout_mode = 0
offset_left = 113.25
offset_top = 40.0
offset_right = 153.25
offset_bottom = 55.0
text = "x 1"

[node name="EggCount" type="Label" parent="CanvasLayer/Ingredients/BreadIngredients"]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 120.0
offset_bottom = 87.0
text = "x 1"

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Ingredients/BreadIngredients"]
position = Vector2(64, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_wc661")

[node name="Ingredients" type="Label" parent="CanvasLayer/Ingredients/BreadIngredients"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 23.0
text = "Ingredients"

[node name="CroissantIngredients" type="Control" parent="CanvasLayer/Ingredients"]
anchors_preset = 0
offset_left = 840.0
offset_top = 88.0
offset_right = 1016.0
offset_bottom = 200.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Ingredients/CroissantIngredients"]
position = Vector2(32, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8xf55")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Ingredients/CroissantIngredients"]
position = Vector2(97.25, 48)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cdyci")

[node name="GroundCount" type="Label" parent="CanvasLayer/Ingredients/CroissantIngredients"]
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 55.0
text = "x 2"

[node name="MilkCount" type="Label" parent="CanvasLayer/Ingredients/CroissantIngredients"]
layout_mode = 0
offset_left = 113.25
offset_top = 40.0
offset_right = 153.25
offset_bottom = 55.0
text = "x 1"

[node name="EggCount" type="Label" parent="CanvasLayer/Ingredients/CroissantIngredients"]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 120.0
offset_bottom = 87.0
text = "x 2"

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Ingredients/CroissantIngredients"]
position = Vector2(64, 80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_wc661")

[node name="Ingredients" type="Label" parent="CanvasLayer/Ingredients/CroissantIngredients"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 23.0
text = "Ingredients"

[node name="Label" parent="CanvasLayer" instance=ExtResource("9_frsyo")]
offset_left = -91.0
offset_top = -43.0
offset_right = -18.0
offset_bottom = -21.0

[node name="Lights" type="Node2D" parent="."]
script = ExtResource("10_2mcdl")
metadata/_custom_type_script = "uid://dnwf3ha7latv3"

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
visible = false
position = Vector2(584, 320)
scale = Vector2(17.4063, 9.53125)
texture = SubResource("GradientTexture2D_cdyci")

[connection signal="pressed" from="CanvasLayer/Market/Exit" to="CanvasLayer/Market" method="_on_button_pressed"]
[connection signal="button_up" from="CanvasLayer/Market/Inventory" to="CanvasLayer/Market" method="_on_inventory_button_up"]
[connection signal="timeout" from="CanvasLayer/Orders/OrderTimer" to="CanvasLayer/Orders" method="_on_order_timer_timeout"]
